[FIXUP] Suggestions